--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -169,7 +169,7 @@ $_helper = $this->helper('catalog/output');
                     </li>
                     <?php $i++; ?>
                 <?php endforeach ?>
-                <div class="reveal small" id="invest" data-reveal></div>
+                <div class="reveal large" id="invest" data-reveal></div>
                 <script>
                     jQuery('.invest').click(function () {
                         jQuery.ajax({
