--- a/app/design/frontend/foundation/default/template/captcha/recaptcha.phtml
+++ b/app/design/frontend/foundation/default/template/captcha/recaptcha.phtml
@@ -11,7 +11,7 @@
     </script>
     <div id="recaptcha_widget" class="group-select wide fieldset" style="display:none">
         <div class="col2-set">
-            <div class="col-1" style="width: 310px; margin-right: 10px; background: transparent; border: 0px none;">
+            <div class="col-1" style="width: 310px; margin-right: 10px; background: transparent; border: 0 none;">
                 <div id="recaptcha_image" style="border: 1px solid #CCCCCC; margin-bottom: 10px;"></div>
                 <div style="text-align: left;">
                     <span class="recaptcha_only_if_image"><?php echo $this->__(
@@ -23,7 +23,7 @@
                     <small class="form-error"><?php echo $this->__('Please enter your password.') ?></small>
                 </div>
             </div>
-            <div class="col-2" style="float: left; width: 25px; background: transparent; border: 0px none;">
+            <div class="col-2" style="float: left; width: 25px; background: transparent; border: 0 none;">
                 <div><a href="javascript:Recaptcha.reload()"><img
                             src="<?php echo $this->getSkinUrl('recaptcha/images/refresh.png'); ?>"
                             title="<?php echo $this->__('Load Another Image'); ?>"
