--- a/app/design/frontend/foundation/default/template/customer/address.phtml
+++ b/app/design/frontend/foundation/default/template/customer/address.phtml
@@ -31,7 +31,7 @@
 <table width="100%">
     <tr>
         <td style="width:50%;"><h3>Default</h3>
-            <table width="100%">
+            <table style="width:100%;">
             <?php if(!empty($primaryAddresses)): ?>
                 <?php foreach($primaryAddresses as $_address): ?>
                 <tr>
