--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -1,6 +1,6 @@
 <footer>
     <div class="footer-top">
-        <a href="#nav-top" id="backtotop">
+        <a href="#top" id="backtotop">
             <div class="backtotop">
                 <span class="navFooterBackToTopText"><?php echo $this->__('Zur&uuml;ck zum Seitenanfang') ?></span>
             </div>
@@ -358,7 +358,6 @@ if ($reviewsFound) {
     $ts_snippet .= '}],';
     $ts_snippet .= '"sameAs": [';
     $ts_snippet .= '"https://www.facebook.com/gastrodax",';
-    $ts_snippet .= '"https://plus.google.com/+gastrodax",';
     $ts_snippet .= '"https://twitter.com/gastrodax",';
     $ts_snippet .= '"https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g"';
     $ts_snippet .= '],';
