--- a/skin/frontend/foundation/default/src/assets/scss/custom/_account.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_account.scss
@@ -14,8 +14,8 @@ input.recaptcha_validation {
   color: #ffffff;
   font-size: 12px;
   border: none;
-  height: 0px;
-  padding: 0px;
+  height: 0;
+  padding: 0;
 }
 
 .block-account {
