--- a/app/design/frontend/foundation/default/template/algoliasearch/autocomplete.phtml
+++ b/app/design/frontend/foundation/default/template/algoliasearch/autocomplete.phtml
@@ -14,7 +14,7 @@ $placeholder = $this->__('Search for products, categories, ...');
 <form id="search_mini_form" action="<?php echo $catalogSearchHelper->getResultUrl() ?>" method="get">
     <div id="algolia-searchbox">
         <label for="search"><?php echo $this->__('Search:') ?></label>
-        <input id="search" type="text" name="<?php echo $catalogSearchHelper->getQueryParamName() ?>" class="input-text algolia-search-input" autocomplete="off" spellcheck="false" autocorrect="off" autocapitalize="off" placeholder="<?php echo $placeholder; ?>" />
+        <input id="search" type="text" name="<?php echo $catalogSearchHelper->getQueryParamName() ?>" class="input-text algolia-search-input" autocomplete="off" spellcheck="false" autocapitalize="off" placeholder="<?php echo $placeholder; ?>" />
         <span class="clear-cross clear-query-autocomplete"></span>
         <span id="algolia-glass" class="magnifying-glass" width="24" height="24"></span>
     </div>
