--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -112,15 +112,7 @@ $_helper = $this->helper('catalog/output');
                 ?>
                 <?php foreach ($_productCollection as $_product): ?>
                     <?php if ($i == $random1 || $i == $random2) { ?>
-                        <li class="item action sdp">
-                            <a class="invest" title="Invest 2021">
-                                <img src="<?php echo $this->getSkinUrl('dist/assets/img/invest2021-banner-400x400.jpg') ?>"
-                                     alt="Invest 2021"/>
-                            </a>
-                            <div class="product-name">
-                                <a class="button hollow invest"><?php echo $this->__('Hier klicken') ?></a>
-                            </div>
-                        </li>
+                        <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('product-list-banner-with-reveal')->toHtml(); ?>
                     <?php } ?>
                     <li class="item">
                         <?php if (date("Y-m-d") >= substr($_product->getNewsFromDate(), 0, 10) && date("Y-m-d") <= substr($_product->getNewsToDate(), 0, 10)) { ?>
@@ -169,21 +161,6 @@ $_helper = $this->helper('catalog/output');
                     </li>
                     <?php $i++; ?>
                 <?php endforeach ?>
-                <div class="reveal large" id="invest" data-reveal></div>
-                <script>
-                    jQuery('.invest').click(function () {
-                        jQuery.ajax({
-                            url: '<?php echo $this->getUrl('ajax/cms/block/id/66');?>',
-                            beforeSend: function () {
-                                jQuery('#reveal-wait').show();
-                            }
-                        })
-                            .done(function (data) {
-                                jQuery('#reveal-wait').hide();
-                                jQuery('#invest').html(data).foundation('open');
-                            });
-                    });
-                </script>
             </ul>
             <script>
                 jQuery('.item').not('.action').on("click", function () {
