--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -27,8 +27,7 @@
  * @var Mage_Page_Block_Html_Header $this
  */
 ?>
-<a id="nav-top"></a>
-<header>
+<header id="top">
     <div class="header-top">
         <div class="brand">
             <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo">
@@ -45,7 +44,7 @@
                              alt="TÜV Süd s@fer shopping"/>
                     </a>
                 </li>
-                <li class="ts-trusted">bis 20.000€ <span>Käuferschutz</span></li>
+                <li class="ts-trusted">bis 20.000 € <span>Käuferschutz</span></li>
                 <li>
                     <a href="https://www.trustedshops.eu/buyerrating/info_X6B5E9287FD5871CE74DA1B1775EB2D64.html"
                        target="_blank" rel="nofollow noopener noreferrer">
@@ -59,10 +58,10 @@
                              alt="kostenfreie Lieferung ab 99 EUR">
                     </a>
                 </li>
-                <li class="deal">
-                    <a href="<?php echo Mage::getUrl('') . 'gastro-sale'; ?>">SALE %</a>
-                </li>
             </ul>
+        </div>
+        <div class="search">
+            <?php echo $this->getChildHtml('topSearch') ?>
         </div>
         <div class="hotline">
             <a href="tel:+498004566000"><i class="fas fa-phone"></i> 0800 456 6000
@@ -75,11 +74,11 @@
               <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
               </span>
-              <span class="hamburger-label show-for-medium">Menu</span>
+                <span class="hamburger-label show-for-medium"><?php echo $this->__('Alle'); ?></span>
             </button>
         </div>
-        <div class="search">
-            <?php echo $this->getChildHtml('topSearch') ?>
+        <div class="top-nav">
+            <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('top-nav')->toHtml(); ?>
         </div>
         <div class="account">
             <?php echo $this->getChildHtml('topLinks', false) ?>
