--- a/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_cms.scss
@@ -1,5 +1,6 @@
 .main-container {
   .col-main {
+    margin: 0;
     .std {
       .row {
         max-width: 100%
@@ -55,7 +56,6 @@
     background-color: $medium-gray;
     border: solid 4px $medium-gray;
     cursor: pointer;
-    filter: gray; /* IE6-9 */
     filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
     -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
     &:hover {
@@ -163,7 +163,7 @@
         z-index: 1;
         right: 30px;
         left: 60px;
-        border: medium solid white;
+        border-style: solid;
         border-width: 10px 10px 10px 0;
         border-color: transparent $primary-color transparent transparent;
       }
@@ -178,7 +178,7 @@
 
       &::before {
         left: 60px;
-        border: medium solid $primary-color;
+        border-style: solid;
         border-width: 10px 10px 10px 0;
         border-color: transparent $primary-color transparent transparent;
       }
@@ -234,7 +234,7 @@
       @include breakpoint(medium up) {
         left: 30px;
       }
-      border: medium solid $primary-color;
+      border-style: solid;
       border-width: 10px 10px 10px 0;
       border-color: transparent $primary-color transparent transparent;
     }
