--- a/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
@@ -56,10 +56,7 @@ $owl-dot-background-active: $primary-color !default;
       top: 0;
       left: -15px;
       display: block !important;
-      border-top-left-radius: $global-radius;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: $global-radius;
+      border-radius: $global-radius 0 0 $global-radius;
     }
 
     .owl-next {
@@ -70,10 +67,7 @@ $owl-dot-background-active: $primary-color !default;
       top: 0;
       right: -15px;
       display: block !important;
-      border-top-left-radius: 0;
-      border-top-right-radius: $global-radius;
-      border-bottom-right-radius: $global-radius;
-      border-bottom-left-radius: 0;
+      border-radius: 0 $global-radius $global-radius 0;
     }
   }
 }
