--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -8,88 +8,55 @@
   }
 }
 
-.product-view {
-  .product-essential {
-    .product-shop {
-      margin-bottom: $global-margin;
-      ul.pricing-table {
-        li.price {
-          .price-box {
-            span.price {
-              background-color: transparent;
-            }
-            .special-price .price {
-              color: $alert-color;
-              font-size: rem-calc(20);
-              font-weight: 600;
-            }
-            .regular-price, .price-as-configured {
-              .price-label {
-                font-size: rem-calc(20);
-              }
-              .price {
-                color: $success-color;
-                font-weight: 600;
-                font-size: rem-calc(20);
-              }
-            }
+.product-view, .product-view-revslider {
+  .product-shop {
+    margin-bottom: $global-margin;
+
+    ul.pricing-table {
+      li.price {
+        .price-box {
+          span.price {
+            background-color: transparent;
           }
-        }
-        li.tier-price {
-          table thead th {
-            text-align: center;
+
+          .special-price .price {
+            font-size: rem-calc(20);
+            font-weight: 600;
+          }
+
+          .special-price .price {
+            color: $alert-color;
+          }
+
+          .regular-price, .price-as-configured {
+            .price-label {
+              font-size: rem-calc(20);
+            }
+
+            .price {
+              color: $success-color;
+              font-weight: 600;
+              font-size: rem-calc(20);
+            }
           }
         }
       }
-      .follower {
-        color: $white;
-        font-weight: 700;
-        margin: 0;
-        font-size: 1rem;
+
+      li.tier-price {
+        table thead th {
+          text-align: center;
+        }
       }
     }
-    .product-img-box {
-      .product-image {
-        margin-bottom: 0.7rem;
-        padding: $global-padding;
-        border-radius: $global-radius;
-        border: solid 1px $light-gray;
-        text-align: center;
-        cursor: pointer;
-        img {
-          transition: $global-transform;
-          &:hover {
-            transform: $global-scale;
-          }
-        }
-      }
-      .product-images {
-        padding: 0;
-        ul.pimages {
-          list-style-type: none;
-          margin: 0;
-          li {
-            @extend .align-middle;
-            img {
-              transition: $global-transform;
-              &:hover {
-                transform: $global-scale;
-              }
-            }
-          }
-        }
-      }
-      .product-environmental-bonus {
-        margin-bottom: 0.7rem;
-        padding: $global-padding;
-        border-radius: $global-radius;
-        border: solid 1px $light-gray;
-      }
+
+    .follower {
+      color: $white;
+      font-weight: 700;
+      margin: 0;
+      font-size: 1rem;
     }
   }
-}
 
-.product-essential {
   .product-img-box {
     .product-image {
       position: relative;
@@ -101,6 +68,7 @@
           z-index: 7;
         }
       }
+
       .special-ribbon {
         z-index: 9;
         position: absolute;
@@ -111,6 +79,7 @@
         height: 200px;
         text-align: right;
       }
+
       .special-ribbon span {
         font-size: rem-calc(20);
         font-weight: bold;
@@ -138,6 +107,7 @@
         height: 150px;
         text-align: right;
       }
+
       .new-ribbon span {
         font-size: rem-calc(20);
         font-weight: bold;
@@ -156,6 +126,7 @@
       }
 
     }
+
     .product-images {
       p {
         color: $primary-color;
@@ -163,63 +134,79 @@
       }
     }
   }
+
   .product-name {
     text-align: center;
+
     h1 {
       color: $primary-color;
       line-height: 1.1;
     }
   }
+
   .pricing-table {
     .bullet-item {
       p {
         margin: 0;
       }
+
       .price {
         font-size: inherit;
         background: inherit;
         padding: 0;
       }
+
       .accordion {
         text-align: left;
+
         .options-list {
           margin-left: 0;
         }
       }
     }
+
     .quantity {
       .minus, .plus {
         cursor: pointer;
       }
     }
+
     .button-group {
       margin: 0;
     }
+
     li.price {
       background-color: $white;
       color: #333333;
     }
+
     .custom-quote {
       margin-bottom: 0 !important;
       font-size: rem-calc(14);
     }
   }
+
   .product-brand {
     text-align: center;
+
     img {
       transition: $global-transform;
+
       &:hover {
         transform: $global-scale;
       }
     }
   }
+
   .sku, .availability, .delivery-time {
     margin-bottom: 0;
   }
+
   .price-box, .tier-price {
     p {
       margin-bottom: 0.2rem;
     }
+
     .regular-price {
       .price {
         .price {
@@ -227,15 +214,18 @@
         }
       }
     }
+
     .mwst-price {
       .price {
         font-size: rem-calc(19);
       }
     }
+
     .skonto-price {
       .price {
         color: $success-color;
       }
+
       .skontoPrice {
         .price {
           color: $success-color;
@@ -243,6 +233,7 @@
         }
       }
     }
+
     .st-skonto-price {
       .skontoPrice {
         .price {
@@ -251,6 +242,7 @@
         }
       }
     }
+
     .st-save-price {
       .skonto {
         .price {
@@ -258,30 +250,83 @@
         }
       }
     }
+
     .old-price, .msrp-price {
       .price, .price-label {
         font-size: rem-calc(15);
       }
     }
+
     .special-price, .to-date {
       color: $alert-color;
+
       .price {
         font-size: rem-calc(20);
       }
     }
   }
+
   .tax-details {
     margin: 0;
+
     a {
       color: $primary-color;
     }
   }
+
   .delivery-time, .delivery-service {
     margin: 0;
   }
+
   .btn-cart {
     margin: 1em 0 0 0;
   }
+
+  .product-image {
+    margin-bottom: 0.7rem;
+    padding: $global-padding;
+    border-radius: $global-radius;
+    border: solid 1px $light-gray;
+    text-align: center;
+    cursor: pointer;
+
+    img {
+      transition: $global-transform;
+
+      &:hover {
+        transform: $global-scale;
+      }
+    }
+  }
+
+  .product-images {
+    padding: 0;
+
+    ul.pimages {
+      list-style-type: none;
+      margin: 0;
+
+      li {
+        @extend .align-middle;
+
+        img {
+          transition: $global-transform;
+
+          &:hover {
+            transform: $global-scale;
+          }
+        }
+      }
+    }
+  }
+
+  .product-environmental-bonus {
+    margin-bottom: 0.7rem;
+    padding: $global-padding;
+    border-radius: $global-radius;
+    border: solid 1px $light-gray;
+  }
+
 }
 
 .add-to-cart,
@@ -289,9 +334,11 @@
   .input-group {
     margin-bottom: 0;
   }
+
   i {
     cursor: pointer;
   }
+
   input {
     margin-bottom: 0 !important;
   }
@@ -302,20 +349,25 @@
   .accordion dd > .content {
     padding: 0;
   }
+
   dt {
     label {
       color: $primary-color;
+
       small {
         color: $alert-color;
       }
     }
   }
+
   ul.options-list {
     list-style-type: none;
     margin-left: 0;
+
     li {
       border-bottom: none !important;
       padding: 0 !important;
+
       a {
         background: $primary-color;
         color: $white;
@@ -323,27 +375,33 @@
         height: 50%;
         border-top-right-radius: $global-radius;
         border-bottom-right-radius: $global-radius;
+
         i {
           padding: 30% 0;
         }
       }
     }
+
     label {
       position: relative;
       z-index: 100;
+
       .description {
         z-index: 101;
       }
     }
+
     .label {
       width: 100%;
       white-space: normal;
       padding: 0 0 5px 0;
 
     }
+
     input[type='radio'], input[type='checkbox'] {
       display: none;
     }
+
     input[type='radio'] + span label, input[type='checkbox'] + span label {
       margin-bottom: 0;
       margin-left: 0;
@@ -361,6 +419,7 @@
       border-color: $primary-color;
       border-width: 1px;
       border-style: solid;
+
       & + span label {
         margin-bottom: 0.4rem;
         position: relative;
@@ -372,37 +431,46 @@
         cursor: pointer;
         width: 100%;
       }
+
       .price-notice .price {
         color: $primary-color;
       }
     }
+
     input[type='radio']:checked + span label, input[type='checkbox']:checked + span label {
       color: $success-color;
       border-color: $success-color;
     }
+
     input[type='radio']:checked + span label span.text, input[type='checkbox']:checked + span label span.text {
       color: $success-color;
       border-color: $success-color;
+
       &:after {
         @include fa-icon;
         @extend .fas;
         content: ' ' fa-content($fa-var-check);
       }
+
       .price-notice .price {
         color: $success-color;
       }
     }
+
     .more {
       cursor: pointer;
+
       &:hover {
         color: $success-color;
       }
     }
   }
+
   .input-box {
     .super-attribute-select {
       margin-bottom: 0;
     }
+
     .validation-advice {
       background-color: $alert-color;
       color: $white;
@@ -426,9 +494,11 @@
 .top-products {
   .owl-carousel {
     margin: 0 !important;
+
     .item {
       padding: 10px;
     }
+
     .owl-item img {
       display: inline;
     }
@@ -437,14 +507,17 @@
 
 .product-collateral {
   margin-bottom: $global-margin;
+
   table.product-attachments {
     .name {
       font-size: rem-calc(13);
     }
+
     .button, p:last-of-type {
       margin-bottom: 0;
     }
   }
+
   ul.note {
     list-style: disc inside;
   }
@@ -456,54 +529,68 @@
   text-align: center;
   border-radius: $global-radius;
   border: solid 1px $light-gray;
+
   li {
     border-bottom: dotted 1px $light-gray;
     font-size: rem-calc(12);
     padding: 0.875rem 1.125rem;
+
     &:last-child {
       border-bottom: 0;
     }
+
     table {
       margin-bottom: 0;
     }
+
     .button {
       margin-bottom: 0;
     }
   }
+
   .title {
     color: $primary-color;
     font-size: rem-calc(10);
+
     h1 {
       margin-bottom: 0;
     }
   }
+
   .price-notice .price {
     color: $white;
   }
+
   .description {
     color: $primary-color;
     font-size: rem-calc(8);
   }
+
   .add-to-cart .button {
     margin: 0;
   }
+
   .bullet-item {
     .product-options dl {
       margin-bottom: 0;
+
       ul.accordion:not(:last-child) {
         margin-bottom: 0.5rem;
       }
+
       .is-active {
         .accordion-title {
           border-radius: $global-radius $global-radius 0 0;
         }
       }
+
       .accordion-title {
         border-radius: $global-radius;
       }
 
     }
   }
+
   .tier-price {
     .tier-price-special {
       .first {
@@ -511,6 +598,7 @@
         font-size: 1.2em;
       }
     }
+
     table {
       @include breakpoint(medium down) {
         @include table-stack;
@@ -523,6 +611,7 @@
   .tabs {
     border-radius: $global-radius $global-radius 0 0;
   }
+
   .tabs-content, .tabs-panel {
     border-radius: 0 0 $global-radius $global-radius;
   }
@@ -531,6 +620,7 @@
 #productAddToCartModal, #productUpdateToCartModal {
   .color-success {
     color: $success-color;
+
     &:before {
       @include fa-icon;
       @extend .fas;
