--- a/skin/frontend/foundation/default/src/assets/scss/custom/_searchautocomplete.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_searchautocomplete.scss
@@ -7,7 +7,7 @@
   .aa-dropdown-menu {
     position: absolute;
     margin-top: -1px;
-    right: 0px !important;
+    right: 0 !important;
     width: 100%;
     z-index: 1000 !important;
     border: 1px solid $light-gray;
