--- a/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
@@ -154,7 +154,7 @@ header {
 
   .header-bottom {
     @include breakpoint(large) {
-      background: scale-color($primary-color, $lightness: -30%);
+      background: #2f2f2f;
     }
     padding: 0 !important;
     margin: 0 !important;
